Inflated the layout working fine

--- a/app/src/main/res/layout/rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/rainbow_toast_layout.xml
@@ -8,6 +8,7 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="@dimen/card_width"
         android:layout_height="@dimen/card_height"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/card_margin_bottom"
         app:cardBackgroundColor="@color/card_backgroud_lite"
         app:cardCornerRadius="@dimen/card_corner_radius"
@@ -21,31 +22,31 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/success"
+                android:id="@+id/rainbowTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/title_message_margin"
                 android:layout_marginRight="@dimen/title_message_margin"
                 android:fontFamily="@font/allertastencil_regular"
-                android:maxLength="@dimen/title_message_maxlength"
-                android:maxLines="@dimen/title_message_maxlines"
+                android:maxLength="25"
+                android:maxLines="1"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
-                android:textAppearance="@style/success" />
+                android:textAppearance="@style/success"/>
 
             <TextView
-                android:id="@+id/connection_"
+                android:id="@+id/rainbowMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/success"
+                android:layout_below="@id/rainbowTitle"
                 android:layout_marginLeft="@dimen/message_margin"
                 android:layout_marginRight="@dimen/message_margin"
                 android:fontFamily="@font/abeezee_regular"
-                android:maxLength="@dimen/message_maxlength"
-                android:maxLines="@dimen/message_maxlines"
+                android:maxLength="100"
+                android:maxLines="2"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
-                android:textAppearance="@style/connection_" />
+                android:textAppearance="@style/success_message" />
 
         </RelativeLayout>
 
