--- a/app/src/main/res/layout/rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/rainbow_toast_layout.xml
@@ -2,17 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:id="@+id/rainbowToast"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/rainbowCard"
         android:layout_width="@dimen/card_width"
         android:layout_height="@dimen/card_height"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/card_margin_bottom"
-        app:cardBackgroundColor="@color/card_backgroud_lite"
+        app:cardBackgroundColor="@color/card_backgroud_success_lite"
         app:cardCornerRadius="@dimen/card_corner_radius"
-        app:strokeColor="@color/card_stroke_lite"
+        app:strokeColor="@color/card_stroke_success_lite"
         app:strokeWidth="@dimen/card_stroke_width">
 
         <RelativeLayout
