--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="success">
+    <style name="success_lite">
 
         <item name="android:textSize">
             14sp
@@ -24,7 +24,62 @@
         </item>
 
     </style>
-    <style name="success_message">
+    <style name="error_lite">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #C77070
+        </item>
+
+    </style>
+    <style name="warning_lite">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #8E8F30
+        </item>
+
+    </style>
+    <style name="info_lite">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #7770C7
+        </item>
+
+    </style>
+    <style name="custom_lite">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #A64C9D
+        </item>
+
+    </style>
+    <style name="default_lite">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #666666
+        </item>
+
+    </style>
+    <style name="lite_message">
 
         <item name="android:textSize">
             10sp
