Added full rainbow design and lite colors which changes from lite to dark, forward for animation

--- a/app/src/main/res/layout/rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/rainbow_toast_layout.xml
@@ -7,52 +7,103 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/rainbowCard"
-        android:layout_width="@dimen/card_width"
-        android:layout_height="@dimen/card_height"
+        android:id="@+id/rainbowCard5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/card_margin_bottom"
         app:cardBackgroundColor="@color/card_backgroud_success_lite"
         app:cardCornerRadius="@dimen/card_corner_radius"
-        app:strokeColor="@color/card_stroke_success_lite"
-        app:strokeWidth="@dimen/card_stroke_width">
+        app:strokeColor="@color/rainbow_card5_lite_stroke_lite"
+        app:strokeWidth="4dp">
 
-        <RelativeLayout
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/rainbowCard4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/message_layout_inside_cardview_margin"
-            android:orientation="vertical">
+            android:layout_marginTop="4dp"
+            app:cardBackgroundColor="@color/card_backgroud_success_lite"
+            app:cardCornerRadius="@dimen/card_corner_radius"
+            app:strokeColor="@color/rainbow_card4_lite_stroke_lite"
+            app:strokeWidth="4dp">
 
-            <TextView
-                android:id="@+id/rainbowTitle"
-                android:layout_width="match_parent"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/rainbowCard3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/title_message_margin"
-                android:layout_marginRight="@dimen/title_message_margin"
-                android:fontFamily="@font/allertastencil_regular"
-                android:maxLength="25"
-                android:maxLines="1"
-                android:text="@string/success_lite"
-                android:textAlignment="center"
-                android:textAppearance="@style/default_lite"/>
+                android:layout_marginTop="4dp"
+                app:cardBackgroundColor="@color/card_backgroud_success_lite"
+                app:cardCornerRadius="@dimen/card_corner_radius"
+                app:strokeColor="@color/rainbow_card3_lite_stroke_lite"
+                app:strokeWidth="4dp">
 
-            <TextView
-                android:id="@+id/rainbowMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rainbowTitle"
-                android:layout_marginLeft="@dimen/message_margin"
-                android:layout_marginRight="@dimen/message_margin"
-                android:fontFamily="@font/abeezee_regular"
-                android:maxLength="100"
-                android:maxLines="2"
-                android:text="@string/success_message_lite"
-                android:textAlignment="center"
-                android:textAppearance="@style/lite_message" />
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/rainbowCard2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    app:cardBackgroundColor="@color/card_backgroud_success_lite"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:strokeColor="@color/rainbow_card2_lite_stroke_lite"
+                    app:strokeWidth="4dp">
 
-        </RelativeLayout>
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/rainbowCard"
+                        android:layout_width="@dimen/card_width"
+                        android:layout_height="@dimen/card_height"
+                        android:layout_marginTop="4dp"
+                        app:cardBackgroundColor="@color/card_backgroud_success_lite"
+                        app:cardCornerRadius="@dimen/card_corner_radius"
+                        app:strokeColor="@color/rainbow_card_lite_stroke_lite"
+                        app:strokeWidth="4dp">
 
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/message_layout_inside_cardview_margin"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/rainbowTitle"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/title_message_margin"
+                                android:layout_marginRight="@dimen/title_message_margin"
+                                android:fontFamily="@font/allertastencil_regular"
+                                android:maxLength="25"
+                                android:maxLines="1"
+                                android:text="@string/success_lite"
+                                android:textAlignment="center"
+                                android:textAppearance="@style/default_lite" />
+
+                            <TextView
+                                android:id="@+id/rainbowMessage"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/rainbowTitle"
+                                android:layout_marginLeft="@dimen/message_margin"
+                                android:layout_marginRight="@dimen/message_margin"
+                                android:fontFamily="@font/abeezee_regular"
+                                android:maxLength="100"
+                                android:maxLines="2"
+                                android:text="@string/success_message_lite"
+                                android:textAlignment="center"
+                                android:textAppearance="@style/lite_message" />
+
+                        </RelativeLayout>
+
+
+                    </com.google.android.material.card.MaterialCardView>
+
+                </com.google.android.material.card.MaterialCardView>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </com.google.android.material.card.MaterialCardView>
 
     </com.google.android.material.card.MaterialCardView>
+
 
 </RelativeLayout>
