--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,9 +15,13 @@
     <dimen name="message_layout_inside_cardview_margin">20dp</dimen>
 
     <!--Card view dimensions    -->
-    <dimen name="card_width">400dp</dimen>
+    <dimen name="card_width">390dp</dimen>
     <dimen name="card_height">400dp</dimen>
     <dimen name="card_margin_bottom">-335dp</dimen>
     <dimen name="card_corner_radius">200dp</dimen>
     <dimen name="card_stroke_width">6dp</dimen>
+    <dimen name="card2_stroke_width">8dp</dimen>
+    <dimen name="card3_stroke_width">10dp</dimen>
+    <dimen name="card4_stroke_width">12dp</dimen>
+    <dimen name="card5_stroke_width">14dp</dimen>
 </resources>
