Removed the color transition, only one background & title color which is custom

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="rainbow_card5_lite_stroke_lite">#FF9C9C</color>
     <!--rainbow lite stroke dark    -->
     <color name="rainbow_card_lite_stroke_dark">#FE5AEE</color>
-    <color name="rainbow_card2_lite_stroke_dark">#5E53D5</color>
+    <color name="rainbow_card2_lite_stroke_dark">#5546FF</color>
     <color name="rainbow_card3_lite_stroke_dark">#70C778</color>
     <color name="rainbow_card4_lite_stroke_dark">#FBFF00</color>
     <color name="rainbow_card5_lite_stroke_dark">#F86464</color>
