--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,26 +2,38 @@
 <resources>
 
     <!--title message    -->
-    <dimen name="title_message_margin">115dp</dimen>
+    <dimen name="title_message_margin">90dp</dimen>
     <dimen name="title_message_maxlines">1</dimen>
+    <dimen name="title_message_size">14dp</dimen>
     <dimen name="title_message_maxlength">25dp</dimen>
 
     <!--para message    -->
-    <dimen name="message_margin">90dp</dimen>
+    <dimen name="message_margin">70dp</dimen>
     <dimen name="message_maxlines">1</dimen>
     <dimen name="message_maxlength">50dp</dimen>
 
     <!--message layout    -->
-    <dimen name="message_layout_inside_cardview_margin">20dp</dimen>
+    <dimen name="message_layout_inside_cardview_margin">28dp</dimen>
 
     <!--Card view dimensions    -->
-    <dimen name="card_width">390dp</dimen>
-    <dimen name="card_height">400dp</dimen>
-    <dimen name="card_margin_bottom">-335dp</dimen>
-    <dimen name="card_corner_radius">200dp</dimen>
-    <dimen name="card_stroke_width">6dp</dimen>
-    <dimen name="card2_stroke_width">8dp</dimen>
-    <dimen name="card3_stroke_width">10dp</dimen>
-    <dimen name="card4_stroke_width">12dp</dimen>
-    <dimen name="card5_stroke_width">14dp</dimen>
+    <dimen name="card_width">1000dp</dimen>
+    <dimen name="card_height">1000dp</dimen>
+    <dimen name="card_margin_bottom">-930dp</dimen>
+    <dimen name="card_corner_radius">800dp</dimen>
+    <dimen name="card_stroke_width">4dp</dimen>
+
+    <!--Card dimensions    -->
+    <dimen name="card_width2">1010dp</dimen>
+    <dimen name="card_heigh2">1010dp</dimen>
+
+    <dimen name="card_width3">1020dp</dimen>
+    <dimen name="card_height3">1020dp</dimen>
+
+    <dimen name="card_width4">1030dp</dimen>
+    <dimen name="card_height4">1030dp</dimen>
+
+    <dimen name="card_width5">1040dp</dimen>
+    <dimen name="card_height5">1040dp</dimen>
+
+    <dimen name="other_card_margin_bottom">-945dp</dimen>
 </resources>
