--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.RainbowToast" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#A09FA1</item>
+        <item name="colorPrimaryVariant">#A09FA1</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l" >#A09FA1</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="success_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
@@ -27,7 +27,7 @@
     <style name="error_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
@@ -38,7 +38,7 @@
     <style name="warning_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
@@ -49,7 +49,7 @@
     <style name="info_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
@@ -60,7 +60,7 @@
     <style name="custom_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
@@ -71,7 +71,7 @@
     <style name="default_lite">
 
         <item name="android:textSize">
-            14sp
+            @dimen/title_message_size
         </item>
 
         <item name="android:textColor">
