--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,25 +13,32 @@
     <color name="card_stroke_success_lite_stoke_dark">#73DC7E</color>
     <color name="card_stroke_success_lite">#70C778</color>
     <color name="card_backgroud_success_lite">#D9CAEDCE</color>
+    <color name="success_title_text_color_lite">#4F9055</color>
     <!--Error-->
     <color name="card_stroke_error_lite_stoke_lite">#FF9C9C</color>
     <color name="card_stroke_error_lite_stoke_dark">#F86464</color>
     <color name="card_stroke_error_lite">#C77070</color>
     <color name="card_backgroud_error_lite">#D9EDCACA</color>
+    <color name="error_title_text_color_lite">#C77070</color>
     <!--Warning-->
     <color name="card_stroke_warning_lite_stoke_lite">#FDFF8E</color>
     <color name="card_stroke_warning_lite_stoke_dark">#ECEE73</color>
     <color name="card_stroke_warning_lite">#C5C770</color>
     <color name="card_backgroud_warning_lite">#D9E8EDCA</color>
+    <color name="warning_title_text_color_lite">#8E8F30</color>
     <!--Info-->
     <color name="card_stroke_info_lite_stoke_lite">#9D95FF</color>
     <color name="card_stroke_info_lite_stoke_dark">#6A5DFB</color>
     <color name="card_stroke_info_lite">#7770C7</color>
     <color name="card_backgroud_info_lite">#D9CBCAED</color>
+    <color name="info_title_text_color_lite">#7770C7</color>
     <!--Custom-->
     <color name="card_stroke_custom_lite_stoke_lite">#FAAFF2</color>
     <color name="card_stroke_custom_lite_stoke_dark">#FE5AEE</color>
     <color name="card_stroke_custom_lite">#C770BE</color>
     <color name="card_backgroud_custom_lite">#D9ECCAED</color>
+    <color name="custom_title_text_color_lite">#A64C9D</color>
 
+    <color name="para_text_color_lite">#666666</color>
+    <color name="default_title_text_color_lite">#666666</color>
 </resources>
