--- a/app/src/main/res/layout/rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/rainbow_toast_layout.xml
@@ -94,7 +94,9 @@
                 android:maxLines="1"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
-                android:textAppearance="@style/custom_lite" />
+                android:textSize="@dimen/title_message_size"
+                android:textColor="@color/custom_title_text_color_lite"
+                />
 
             <TextView
                 android:id="@+id/rainbowMessage"
@@ -108,7 +110,9 @@
                 android:maxLines="2"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
-                android:textAppearance="@style/lite_message" />
+                android:textSize="@dimen/para_message_size"
+                android:textColor="@color/para_text_color_lite"
+                />
 
         </RelativeLayout>
 
