--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,16 +4,17 @@
     <!--title message    -->
     <dimen name="title_message_margin">90dp</dimen>
     <dimen name="title_message_maxlines">1</dimen>
-    <dimen name="title_message_size">14dp</dimen>
+    <dimen name="title_message_size">14sp</dimen>
     <dimen name="title_message_maxlength">25dp</dimen>
 
     <!--para message    -->
     <dimen name="message_margin">70dp</dimen>
     <dimen name="message_maxlines">1</dimen>
+    <dimen name="para_message_size">10sp</dimen>
     <dimen name="message_maxlength">50dp</dimen>
 
     <!--message layout    -->
-    <dimen name="message_layout_inside_cardview_margin">28dp</dimen>
+    <dimen name="message_layout_inside_cardview_margin">25dp</dimen>
 
     <!--Card view dimensions    -->
     <dimen name="card_width">1000dp</dimen>
