Added rough design of halloween bat, looking forward complete design, color

--- a/app/src/main/res/layout/halloween_toast_layout.xml
+++ b/app/src/main/res/layout/halloween_toast_layout.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/rainbowToast"
     android:layout_width="wrap_content"
@@ -12,15 +10,12 @@
         android:layout_width="@dimen/card_width"
         android:layout_height="@dimen/card_height"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/card_margin_bottom"
-        app:cardBackgroundColor="@color/card_backgroud_success_lite"
-        app:cardCornerRadius="@dimen/card_corner_radius"
-        app:strokeColor="@color/card_stroke_success_lite"
-        app:strokeWidth="@dimen/card_stroke_width">
+        >
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="@dimen/message_layout_inside_cardview_margin"
             android:orientation="vertical">
 
@@ -28,14 +23,12 @@
                 android:id="@+id/rainbowTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/title_message_margin"
-                android:layout_marginRight="@dimen/title_message_margin"
-                android:fontFamily="@font/abeezee_regular"
-                android:maxLength="30"
+                android:fontFamily="@font/eater_regular"
                 android:maxLines="1"
                 android:text="@string/success_lite"
-                android:textAlignment="center"
-                android:textColor="@color/default_title_text_color_lite"
+                android:paddingLeft="10dp"
+                android:layout_marginRight="35dp"
+                android:textColor="#006B0B"
                 android:textSize="@dimen/title_message_size" />
 
             <TextView
@@ -43,13 +36,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rainbowTitle"
-                android:layout_marginLeft="@dimen/message_margin"
-                android:layout_marginRight="@dimen/message_margin"
-                android:fontFamily="@font/abeezee_regular"
-                android:maxLength="200"
-                android:maxLines="2"
+                android:fontFamily="@font/fontdinerswanky_regular"
+                android:layout_marginRight="20dp"
+                android:maxLines="1"
                 android:text="@string/success_message_lite"
-                android:textAlignment="center"
                 android:textColor="@color/para_text_color_lite"
                 android:textSize="@dimen/para_message_size" />
 
